--- a/index.html
+++ b/index.html
@@ -12,21 +12,30 @@
         <img src="./img/drumbeat_logo.png" id="logo">
         <div id="credentials">
             <ul >
-                <li>login</li>
-                <li>sign up</li>
+                <li><a href="">login</a></li>
+                <li><a href="">sign up</a></li>
             </ul>
         </div>
         <div id="header_navigation">
             <ul >
-                <li>about</li>
-                <li>projects</li>
-                <li>people</li>
-                <li>festival</li>
-                <li>donate</li>
+                <li><a href="">about</a></li>
+                <li><a href="">projects</a></li>
+                <li><a href="">people</a></li>
+                <li><a href="">festival</a></li>
+                <li><a href="">donate</a></li>
             </ul>
         </div>
         <h1 id="titulo">Drumbeat Learning,Freedom and the Web Festival</h1>
     </header>
+    <nav id="navegacion">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li id="current"><a href="#">News</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+    </nav>
     
 </body>
 </html>
