--- a/drumbeatConBootstrap/index.html
+++ b/drumbeatConBootstrap/index.html
@@ -388,12 +388,11 @@
                     </ul>
                 </div>
                 <div >
-                    <ul>
-                        <li>
-                            <img src="img/mozilla-license.png" height="16px" width="16px" alt="">
-                            <p>Mozilla.org Privacy policy</p>
-                        </li>
-                    </ul>
+                    <img src="img/mozilla-license.png" height="16px" width="16px" alt="">
+                    <p>Mozilla.org Privacy policy</p>
+                    <br>
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Este obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">licencia de Creative Commons Reconocimiento-NoComercial-CompartirIgual 4.0 Internacional</a>.
+                
                 </div>
                 <div class="footer-policy">
                     <ul>
